prossionalform spacing issue fixed

--- a/src/app/seller-set-up/seller-set-up.component.scss
+++ b/src/app/seller-set-up/seller-set-up.component.scss
@@ -458,6 +458,7 @@ select {
   }
 
   &__select {
+    display: inline-block;
     width: 40%;
     -webkit-appearance: none;
     cursor: pointer;
@@ -524,7 +525,7 @@ select {
 }
 
 .professionalTextInput {
-  width: 100%;
+  width: 90%;
   padding: 0.4rem 1rem;
   
 }
